calculating the width of the rating stars to prevent clipping

--- a/css/latestreviews.css
+++ b/css/latestreviews.css
@@ -64,17 +64,24 @@ h2 {
 }
 .ratingbox {
 	height: 58.5px;
-	width: 250px;
+	width: 238.89px;
 	font-family: Tahoma, Geneva, sans-serif;
-	font-size: 0.8em;
+	font-size: 1em;
 	position: absolute;
 	left: 380px;
-	padding-left: 15px;
 	text-align: left;
 	vertical-align: middle;	
 	padding-top: 26.5px;
 	color: #56B2D7;
 	font-weight: bold;
+	margin-left: 25px;
+}
+
+.rating-value {
+	display: inline;
+	vertical-align: top;
+	left: 245px;
+	position: absolute;
 }
 
 
